[package]
name = "pca9535"
version = "1.0.0"
edition = "2021"
authors = ["TeyKey1"]
repository = "https://github.com/TeyKey1/pca9535"
description = "PCA 9535 IO-Expander driver using embedded-hal"
keywords = ["no-std", "io-expander", "expander", "embedded-hal", "i2c"]
categories = ["embedded", "no-std", "hardware-support"]
readme = "README.md"
license = "MIT"

[features]
std = []

[dependencies]
embedded-hal = "=1.0.0-alpha.5"

[dev-dependencies]
pca9535 = { path = ".", features = ["std"] }
rppal = { version = "0.13.0", features = ["hal"] }
shared-bus = {git = "https://github.com/TeyKey1/shared-bus.git", rev = "046dc03", features = ["std"]}
lazy_static = "1.4"
serial_test = "0.6"

