[package]
name = "pca9535"
version = "1.2.0"
edition = "2021"
authors = ["TeyKey1"]
repository = "https://github.com/TeyKey1/pca9535"
description = "PCA 9535 IO-Expander driver using embedded-hal"
keywords = ["no-std", "io-expander", "expander", "embedded-hal", "i2c"]
categories = ["embedded", "no-std", "hardware-support"]
readme = "README.md"
license = "MIT"

[features]
std = []

[dependencies]
hal = { version = "=1.0.0-alpha.9", package = "embedded-hal" }

[dev-dependencies]
lazy_static = "1.4"
pca9535 = { path = ".", features = ["std"] }
rppal = { version = "0.14.1", features = ["hal"] }
serial_test = "0.6"
shared-bus = { version = "0.2.5", features = ["std", "eh-alpha"] }
