[package]
name = "pca9535"
version = "1.2.0"
edition = "2021"
authors = ["TeyKey1"]
repository = "https://github.com/TeyKey1/pca9535"
description = "PCA 9535 IO-Expander driver using embedded-hal"
keywords = ["no-std", "io-expander", "expander", "embedded-hal", "i2c"]
categories = ["embedded", "no-std", "hardware-support"]
readme = "README.md"
license = "MIT"

[features]
std = []

[dependencies]
hal = { version = "1.0", package = "embedded-hal" }

[dev-dependencies]
pca9535 = { path = ".", features = ["std"] }
once_cell = "1.19"
rppal = { version = "0.17", features = ["hal"] }
serial_test = "3.0"
embedded-hal-bus = { version = "0.1", features = ["std"] }
